--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -1,6 +1,10 @@
 {
+  "AppSettings":{
+    "Token": "abc123abc123def456def789ghi",
+    "Client_URL": "http://localhost:4200"
+  },
   "ConnectionStrings":{
-    "DefaultConnection": "Server=ARMANDODESKTOP; Database=WebAppi;trusted_connection=Yes;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=ARMANDODESKTOP; Database=WebAppi;trusted_connection=Yes;MultipleActiveResultSets=True"    
   },
   "Logging": {
     "LogLevel": {
