--- a/DatingAPP-SPA/angular.json
+++ b/DatingAPP-SPA/angular.json
@@ -27,7 +27,9 @@
               "src/styles.css"
             
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -87,7 +89,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+             
+            ]
           }
         },
         "lint": {
